--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,11 @@ address{
 }
 
 .burger__container{
-    padding: 23px 24px 32px 24px;
+    height: 100%;
+    padding: 23px 24px 10px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .burger__top{
@@ -68,6 +72,7 @@ address{
 }
 
 .burger__option-list{
+    margin-bottom: auto;
     margin-top: 50px;
 }
 
@@ -99,9 +104,14 @@ address{
 }
 
 .burger__footer{
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
+@media (min-width: 768px){
+    .burger__footer{
+        margin-top: 20px;
+    }
+}
 
 .burger__contacts-buttons{
     margin-bottom: 16px;
@@ -127,7 +137,6 @@ address{
 }
 
 .burger__number{
-    margin-bottom: 40px;
     font-family: "TT Lakes Bold", "sans-serif";
     font-size: 26px;
 }
